# 2d-platformer

./: .gitignore  CMakeLists.txt  settings.txt
assets/: settings.txt
assets/levels/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
cmake/: embed_assets.cmake
levels/: 2.txt  5.txt  7.txt
src/: embedded_assets.hpp  main.cpp
